updated the image files

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://satyamrathod45.github.io/DecimalTv/",
+  "homepage": "https://satyamrathod45.github.io/DecimalTv",
+
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
